@@ -7,7 +7,7 @@
  *
  */
 
-/* Copyright (C) 2012-2015 Jose E. Marchesi */
+/* Copyright (C) 2012-2018 Jose E. Marchesi */
 
 /* This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -116,9 +116,7 @@ rec_aggregate_reg_new (void)
 
   new = malloc (sizeof (struct rec_aggregate_reg_s));
   if (new)
-    {
-      new->num_functions = 0;
-    }
+    new->num_functions = 0;
 
   return new;
 }
@@ -129,11 +127,9 @@ rec_aggregate_reg_destroy (rec_aggregate_reg_t func_reg)
   if (func_reg)
     {
       size_t i = 0;
-      for (i = 0; i < func_reg->num_functions; i++)
-        {
-          free (func_reg->functions[i].name);
-        }
 
+      for (i = 0; i < func_reg->num_functions; i++)
+        free (func_reg->functions[i].name);
       free (func_reg);
     }
 }
@@ -147,25 +143,21 @@ rec_aggregate_reg_add (rec_aggregate_reg_t func_reg,
   size_t i = 0;
 
   for (i = 0; i < func_reg->num_functions; i++)
-    {
-      if (strcmp (name, func_reg->functions[i].name) == 0)
-        {
-          /* Replace the existing function.  */
-          func_reg->functions[i].function = function;
-          function_replaced = true;
-          break;
-        }
-    }
+    if (strcmp (name, func_reg->functions[i].name) == 0)
+      {
+        /* Replace the existing function.  */
+        func_reg->functions[i].function = function;
+        function_replaced = true;
+        break;
+      }
 
   if (!function_replaced)
     {
       /* Insert the function into a new entry in the registry.  */
 
       if (func_reg->num_functions == MAX_FUNCTIONS)
-        {
-          /* FIXME: this is crappy as hell.  */
-          return false;
-        }
+        /* FIXME: this is crappy as hell.  */
+        return false;
 
       func_reg->functions[func_reg->num_functions].name = strdup (name);
       func_reg->functions[func_reg->num_functions].function = function;
@@ -183,13 +175,11 @@ rec_aggregate_reg_get (rec_aggregate_reg_t func_reg,
   rec_aggregate_t res = NULL;
 
   for (i = 0; i < func_reg->num_functions; i++)
-    {
-      if (strcasecmp (func_reg->functions[i].name, name) == 0)
-        {
-          res = func_reg->functions[i].function;
-          break;
-        }
-    }
+    if (strcasecmp (func_reg->functions[i].name, name) == 0)
+      {
+        res = func_reg->functions[i].function;
+        break;
+      }
 
   return res;
 }
@@ -200,9 +190,7 @@ rec_aggregate_reg_add_standard (rec_aggregate_reg_t func_reg)
   size_t i = 0;
 
   for (i = 0; i < NUM_STD_AGGREGATES; i++)
-    {
-      rec_aggregate_reg_add (func_reg, std_aggregates[i].name, std_aggregates[i].func);
-    }
+    rec_aggregate_reg_add (func_reg, std_aggregates[i].name, std_aggregates[i].func);
 }
 
 bool
@@ -212,13 +200,11 @@ rec_aggregate_std_p (const char *name)
   size_t i   = 0;
 
   for (i = 0; i < NUM_STD_AGGREGATES; i++)
-    {
-      if (strcasecmp (name, std_aggregates[i].name) == 0)
-        {
-          found = true;
-          break;
-        }
-    }
+    if (strcasecmp (name, std_aggregates[i].name) == 0)
+      {
+        found = true;
+        break;
+      }
 
   return found;
 }
@@ -236,17 +222,14 @@ rec_aggregate_std_count (rec_rset_t rset,
   size_t count = 0;
 
   if (record)
-    {
-      count = rec_record_get_num_fields_by_name (record, field_name);
-    }
+    count = rec_record_get_num_fields_by_name (record, field_name);
   else if (rset)
     {
       rec_record_t rec = NULL;
       rec_mset_iterator_t iter = rec_mset_iterator (rec_rset_mset (rset));
+
       while (rec_mset_iterator_next (&iter, MSET_RECORD, (void *) &rec, NULL))
-        {
-          count = count + rec_record_get_num_fields_by_name (rec, field_name);
-        }
+        count = count + rec_record_get_num_fields_by_name (rec, field_name);
       rec_mset_iterator_free (&iter);
     }
 
@@ -267,14 +250,13 @@ rec_aggregate_std_avg (rec_rset_t rset,
   double avg = 0;
 
   if (record)
-    {
-      avg = rec_aggregate_std_avg_record (record, field_name);
-    }
+    avg = rec_aggregate_std_avg_record (record, field_name);
   else if (rset)
     {
       size_t num_records = 0;
       rec_record_t rec = NULL;
       rec_mset_iterator_t iter = rec_mset_iterator (rec_rset_mset (rset));
+
       while (rec_mset_iterator_next (&iter, MSET_RECORD, (void *) &rec, NULL))
         {
           avg = avg + rec_aggregate_std_avg_record (rec, field_name);
@@ -283,23 +265,13 @@ rec_aggregate_std_avg (rec_rset_t rset,
       rec_mset_iterator_free (&iter);
 
       if (num_records != 0)
-        {
-          avg = avg / num_records;
-        }
+        avg = avg / num_records;
     }
 
   /* Return the average as a string.  Note that if NULL is returned it
      will be returned by this function below to signal the
      end-of-memory condition.  */
-      
-  if (avg == floor (avg))
-    {
-      asprintf (&result, "%zu", (size_t) avg);
-    }
-  else
-    {
-      asprintf (&result, "%f", avg);
-    }
+  asprintf (&result, "%g", avg);
 
   return result;
 }
@@ -328,9 +300,7 @@ rec_aggregate_std_avg_record (rec_record_t record,
   rec_mset_iterator_free (&iter);
 
   if (num_fields != 0)
-    {
-      avg = avg / num_fields;
-    }
+    avg = avg / num_fields;
 
   return avg;
 }
@@ -341,39 +311,34 @@ rec_aggregate_std_avg_record (rec_record_t record,
                             rec_record_t record,                        \
                             const char *field_name)                     \
   {                                                                     \
-  char *result = NULL;                                                  \
-  double val   = INIT_VAL;                                              \
+    char *result = NULL;                                                \
+    double val   = INIT_VAL;                                            \
                                                                         \
-  if (record)                                                           \
-    {                                                                   \
+    if (record)                                                         \
       val = rec_aggregate_std_##NAME##_record (record, field_name);     \
-    }                                                                   \
-  else if (rset)                                                        \
-    {                                                                   \
-      rec_record_t rec = NULL;                                          \
-      rec_mset_iterator_t iter = rec_mset_iterator (rec_rset_mset (rset)); \
-      while (rec_mset_iterator_next (&iter, MSET_RECORD, (void *) &rec, NULL)) \
-        {                                                               \
+    else if (rset)                                                      \
+      {                                                                 \
+        rec_record_t rec = NULL;                                        \
+        rec_mset_iterator_t iter = rec_mset_iterator (rec_rset_mset (rset)); \
+        while (rec_mset_iterator_next (&iter, MSET_RECORD, (void *) &rec, NULL)) \
           val = OP (val, rec_aggregate_std_##NAME##_record (rec, field_name)); \
-        }                                                               \
-      rec_mset_iterator_free (&iter);                                   \
-    }                                                                   \
+        rec_mset_iterator_free (&iter);                                 \
+      }                                                                 \
                                                                         \
-  /* Return the val as a string.  Note that if NULL is returned it      \
-     will be returned by this function below to signal the              \
-     end-of-memory condition.  */                                       \
+    /* Return the val as a string.  Note that if NULL is returned it */ \
+    /* will be returned by this function below to signal the */         \
+    /* end-of-memory condition.  */                                     \
+    asprintf (&result, "%g", val);                                      \
                                                                         \
-  asprintf (&result, "%g", val);                                        \
-                                                                        \
-  return result;                                                        \
+    return result;                                                      \
   }                                                                     \
                                                                         \
   static double                                                         \
   rec_aggregate_std_##NAME##_record (rec_record_t record,               \
                                      const char *field_name)            \
   {                                                                     \
-  /* Calculate the val of the fields in a given record.  Fields not     \
-     representing a real value are ignored.  */                         \
+    /* Calculate the val of the fields in a given record.  Fields */    \
+    /* not representing a real value are ignored.  */                   \
                                                                         \
   double val = INIT_VAL;                                                \
   rec_field_t field;                                                    \
@@ -381,14 +346,12 @@ rec_aggregate_std_avg_record (rec_record_t record,
                                                                         \
   while (rec_mset_iterator_next (&iter, MSET_FIELD, (void *) &field, NULL)) \
     {                                                                   \
-  const char *field_value = rec_field_value (field);                    \
-  double field_value_double = 0;                                        \
+      const char *field_value = rec_field_value (field);                \
+      double field_value_double = 0;                                    \
                                                                         \
-  if (rec_field_name_equal_p (rec_field_name (field), field_name)       \
-      && rec_atod (field_value, &field_value_double))                   \
-    {                                                                   \
-      val = OP (val, field_value_double);                               \
-    }                                                                   \
+      if (rec_field_name_equal_p (rec_field_name (field), field_name)   \
+          && rec_atod (field_value, &field_value_double))               \
+        val = OP (val, field_value_double);                             \
     }                                                                   \
   rec_mset_iterator_free (&iter);                                       \
                                                                         \
