@@ -1,7 +1,8 @@
-2018-03-18  Jose E. Marchesi  <jemarch@gnu.org>
+2018-03-18  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* src/rec-aggregate.c (REC_AGGREGATE_ACCUM_FUNC): Use %g instead
 	of %zd to print the result of aggregate functions.
+	* torture/utils/recsel.sh: Adjust expected result.
 
 2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
 
